# university

./: .gitignore
course1/sem1/OAIP/: L2.cpp  L6.cpp  L7.cpp
course1/sem1/OKG/: visio.vsdx
course1/sem1/PPOIS/: find_files.sh  rr graph(не связанный).txt  rr graph(общее ребро).txt
course1/sem1/TMOIS/: L1.cpp  L1.docx  L2.cpp
course1/sem2/OAIP/: BST.cpp  HASH.cpp  RECURSION.cpp  RPN.cpp
course2/sem3/CM/: LAB1_1.2_Voinov_421701.cdf  LAB1_3_Voinov_421701.cdf  LAB2_Voinov_421701.nb
course2/sem3/OTIS/: General Report.docx  lab5.py
lab1/: README.md
lab1/src/lab1/: __init__.py  cli.py  errors.py  models.py  service.py
lab2/: README.md
lab2/src/app/: controller.py
lab3/src/minesweeper/: audio.py  utils.py
lab4/: README.md
lab4/src/lab4/: errors.py
sem1/OAIP/: L1.cpp  L3.cpp  L4.cpp  L5.cpp  L8.cpp
sem1/PPOIS/: find_files.bat  rr graph(кактус с ответвлением).txt  rr graph(кактус).txt  rr.cpp
sem1/TMOIS/: L2.docx
sem2/OAIP/: COURSEWORK.cpp  QUEUE.cpp  STACK.cpp
sem2/PPOIS/PA/: KBE_Geometry.gwf
sem2/PPOIS/RR/: algoritm.gwf
sem2/PPOIS/lab1/: AVL.h  Source.cpp  avl.cpp
sem2/PPOIS/lab2/: README.md  header.h  main.cpp  test.cpp
sem3/CM/: LAB1_1.1_Voinov_421701.cdf  LAB3_Voinov_421701.nb  LAB4_Voinov_421701.nb  LAB5_Voinov_421701.nb
sem4/PPOIS/lab3/: README.md  pyproject.toml
sem4/PPOIS/lab3/config/: game.json  records.json
sem4/PPOIS/lab3/src/minesweeper/: board.py  paths.py  records.py
sem4/PPOIS/lab4/: pyproject.toml
sem4/PPOIS/lab4/src/lab4/: presenter.py  service.py
sem4/PPOIS/lab4/tests/: test_service.py
(+330 files in other folders)
