[project]
name = "lab3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["pygame>=2.5"]

[project.scripts]
minesweeper = "minesweeper.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
