[project]
name = "lab4"
version = "0.1.0"
description = "Fair management system with CLI and GUI."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lab4-cli = "lab4.cli:main"
lab4-gui = "lab4.gui:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
